syntax="proto3";

package organization_service;
option go_package="genproto/organization_service";

// import "google/protobuf/struct.proto";

message PrimaryKey {
    string id = 1;
}


message Branch{
    string id=1;
    string branchCode=2;
    string name=3;
    string address=4;
    string phoneNumber=5;
}

message CreateBranchRequest{
    string branchCode=1;
    string name=2;
    string address=3;
    string phoneNumber=4;
}

message GetListBranchRequest{
    string name=1;
}

message GetBranchsListResponse {
    repeated Branch bramchs = 1;
    int32 count = 2;
}

message UpdateBranchRequest {
    Branch branch = 1;
}

message Obj {
    string key = 1;
    string value = 2;
}

// google.protobuf.Struct value = 2;

message PatchUpdateRequest {
    string id = 1;
    repeated Obj params = 2;
}
